--- a/src/articles/the-higgs-boson-challenge.org
+++ b/src/articles/the-higgs-boson-challenge.org
@@ -1,7 +1,7 @@
 #+TITLE: The Higgs Boson Challenge
 #+DESCRIPTION: Hello world
 #+DATE: 2021-03-01
-#+HERO: /static/trees-bg.png
+#+HERO: /static/higgs-bg.png
 
 In 2012, the ATLAS experiment at the Large Hadron Collider in Switzerland, discovered a new particle called the Higgs Boson. This discovery was a breakthrough in particle physics, as the Higgs Boson was long theorized to exist, but almost impossible to detect. It's small, has no spin or electrical charge, and is so unstable that it decays into other particles almost instantly.[^1] After the discovery, the media dubbed the Higgs Boson "the god particle" due to its role in generating mass as other particles interact with the Higgs field.
 
