--- a/src/articles/open-exoplanet-catalogue.org
+++ b/src/articles/open-exoplanet-catalogue.org
@@ -5,13 +5,13 @@
 
 The NASA open catalogue of exoplanets is a dataset of almost 4000 planets, created in 2012 and maintained as a free and decentralized database by a community of volunteers. Over the last 5 years, technological advancements and data collection efforts have spurned the discovery of more planets than in the previous 100 years combined. Sky survey projects all over the world are collecting terabytes of information every night, leaving data scientists with ample opportunity to explore the universe.[^2]
 
-## Introduction
+** Introduction
 
 I downloaded the dataset from <https://exoplanetarchive.ipac.caltech.edu/cgi-bin/TblView/nph-tblView?app=ExoTbls&config=planets>. At the time of this article, the dataset contains 3972 confirmed exoplanets with 144 attributes relating to each. Because of the large number of attributes, I'm going to post omitted/shortened outputs of the dataframes and descriptions. If you want to print out all the information for a particular dataframe, wrap it in the function `showall(df)` or `show(df, allcols=true, allrows=true)`.[^3]
 
 Included in the downloaded dataset is a header detailing the column definitions.
 
-```julia
+#+BEGIN_SRC julia
 # COLUMN pl_hostname:    Host Name
 # COLUMN pl_letter:      Planet Letter
 # COLUMN pl_name:        Planet Name
@@ -24,16 +24,16 @@ Included in the downloaded dataset is a header detailing the column definitions.
 # COLUMN pl_orbeccen:    Eccentricity
 # COLUMN pl_orbincl:     Inclination [deg]
 # COLUMN st_m1:          m1 (Stromgren) [mag]
-```
+#+END_SRC
 
-```julia
+#+BEGIN_SRC julia
 using ColorSchemes, CSV, DataFrames, Gadfly
 
 # Exoplanets downloaded from https://exoplanetarchive.ipac.caltech.edu/cgi-bin/TblView/nph-tblView?app=ExoTbls&config=planets
 exoplanets = CSV.read("planets_2019.06.07_18.33.16.csv", comment="#")
-```
+#+END_SRC
 
-```text
+#+BEGIN_SRC none
 3972×144 DataFrame. Omitted printing of 134 columns
 │ Row  │ rowid │ pl_hostname │ pl_letter │ pl_name   │ pl_discmethod   │ pl_controvflag │ pl_pnum │ pl_orbper │ pl_orbsmax │ pl_orbeccen │
 │      │ Int64 │ String      │ String    │ String    │ String          │ Int64          │ Int64   │ Float64   │ Float64    │ Float64     │
@@ -44,18 +44,18 @@ exoplanets = CSV.read("planets_2019.06.07_18.33.16.csv", comment="#")
 │ 3970 │ 3970  │ ups And     │ c         │ ups And c │ Radial Velocity │ 0              │ 3       │ 241.258   │ 0.827774   │ 0.2596      │
 │ 3971 │ 3971  │ ups And     │ d         │ ups And d │ Radial Velocity │ 0              │ 3       │ 1276.46   │ 2.51329    │ 0.2987      │
 │ 3972 │ 3972  │ xi Aql      │ b         │ xi Aql b  │ Radial Velocity │ 0              │ 1       │ 136.75    │ 0.68       │ 0.0         │
-```
+#+END_SRC
 
-## Overview
+** Overview
 
 Now that we've loaded the dataset into a dataframe, we can start to dig in to the exoplanets and their attributes. By calling `describe(df)` we can calculate basic statistics about every attribute for every exoplanet.
 
-```julia
+#+BEGIN_SRC julia
 # Statistical details of the entire dataset
 @show describe(exoplanets)
-```
+#+END_SRC
 
-```text
+#+BEGIN_SRC julia
 144×8 DataFrame
 │ Row │ variable    │ mean     │ min    │ median │ max    │ nunique │ nmissing │ eltype   │
 │     │ Symbol      │ Union…   │ Any    │ Union… │ Any    │ Union…  │ Union…   │ DataType │
@@ -66,11 +66,11 @@ Now that we've loaded the dataset into a dataframe, we can start to dig in to th
 │ 142 │ st_m1       │ 0.285146 │ 0.129  │ 0.253  │ 0.774  │         │ 3615     │ Float64  │
 │ 143 │ st_c1       │ 0.359557 │ -0.013 │ 0.368  │ 0.686  │         │ 3615     │ Float64  │
 │ 144 │ st_colorn   │ 5.47432  │ 0      │ 5.0    │ 83     │         │          │ Int64    │
-```
+#+END_SRC
 
 Here we can see that each of the columns belong to one of three categories, meta information about the discoveries, planet characteristics and measurements, or host star characteristics and measurements. Most of the columns show missing data, so we'll need to account for that when making comparisons between exoplanets or attributes.
 
-### How were they discovered?
+*** How were they discovered?
 
 Exoplanet discovery has exploded in the last 10 years thanks to powerful telescopes, sensitive photometry technology and precise data analysis. The dataset shows 10 different discovery methods used to find exoplanets. Transit and radial velocity appear to be the most popular and are both techniques that involve analyzing the photometry of the host star in a system to spot characterstics consistent with an orbiting planet.
 
@@ -78,11 +78,13 @@ The radial velocity method relies on the fact that a star moves in a small ellip
 
 The transit method works by measuring the brightness of a star. When an orbiting planet pass between Earth and the star, the brightness of that star slightly dims. When this dimming happens at regular intervals, and for a fixed length of time, then it's probable that a planet is orbiting it.[^5]
 
-<object data="discoveries.svg" type="image/svg+xml">
-  <param name="url" value="discoveries.svg">
+#+BEGIN_HTML
+<object data="/static/open-exoplanet-catalogue/discoveries.svg" type="image/svg+xml">
+  <param name="url" value="/static/open-exoplanet-catalogue/discoveries.svg">
 </object>
+#+END_HTML
 
-```julia
+#+BEGIN_SRC julia
 plot(
   dropmissing(exoplanets, [:pl_disc, :pl_discmethod]),
   x = :pl_disc,
@@ -93,9 +95,9 @@ plot(
   Guide.xlabel("Discovery Year"),
   Guide.colorkey(title = "Discovery Method")
 )
-```
+#+END_SRC
 
-### Where are they?
+*** Where are they?
 
 Most discovered exoplanets live within 500 parsecs (1630.78 light years) of Earth. This is a limitation of our current technology more than anything. As our observation and data collection capabilities improve, I expect the number of discovered exoplanets to grow exponentially.
 
@@ -103,11 +105,13 @@ The closest and farthest planets we've found so far are Proxima Centauri b at 1.
 
 We're mapping the exoplanet locations using the galactic coordinate system. This is a polar coordinate system that uses the Earth as the origin and the center of the milky way galaxy as a 0 degree bearing.[^6] By converting the polar coordinates to cartesian coordinates, we can plot the relative position of the stars.
 
-<object data="star-map.svg" type="image/svg+xml">
-  <param name="url" value="star-map.svg">
+#+BEGIN_HTML
+<object data="/static/open-exoplanet-catalogue/star-map.svg" type="image/svg+xml">
+  <param name="url" value="/static/open-exoplanet-catalogue/star-map.svg">
 </object>
+#+END_HTML
 
-```julia
+#+BEGIN_SRC julia
 # Exoplanet locations
 coordinates = unique(dropmissing(exoplanets, [:st_glon, :st_dist]), [:st_glon, :st_dist])
 
@@ -137,21 +141,24 @@ plot(
   Guide.xlabel("Distance (Parsecs)"),
   Guide.ylabel("Distance (Parsecs)")
 )
-```
+#+END_SRC
 
-## Planet Characterstics
+** Planet Characterstics
 
 Our solar system has 8 planets, each with varying characteristics. We have small terrestial planets, large gas giants, and cold ice giants. Do the exoplanets show as much variety? Do our discovery methods predispose us to finding certain types of planets?
 
-### How big are the planets?
+*** How big are the planets?
 
 When plotting the exoplanets by their mass and radius, we see a host of different sizes. The majority appear to be terrestrial around Earth's size, but we also have a smattering of gas giants bigger than Jupiter, the largest planet in our solar system.
 
-<object data="mass-radius-scatter.svg" type="image/svg+xml">
-  <param name="url" value="mass-radius-scatter.svg">
+#+BEGIN_HTML
+<object data="/static/open-exoplanet-catalogue/mass-radius-scatter.svg" type="image/svg+xml">
+  <param name="url" value="/static/open-exoplanet-catalogue/mass-radius-scatter.svg">
 </object>
+#+END_HTML
 
-```julia
+
+#+BEGIN_SRC julia
 planet_sizes = DataFrame(
   name = ["Mercury", "Venus", "Earth", "Mars", "Jupiter", "Saturn", "Uranus", "Neptune"],
   mass = [0.0553, 0.815, 1, 0.107, 317.8, 95.2, 14.5, 17.1],
@@ -177,15 +184,17 @@ plot(
   Guide.xlabel("Radius (Earth Radii)"),
   Guide.ylabel("Mass (Earth Mass)")
 )
-```
+#+END_SRC
 
 By plotting the size as a 2d density contour, we can see the patterns shown in the scatter plot above. It's clear in this plot, that most exoplanets cluster around sizes between Mercury/Earth/Mars and Uranus/Neptune.
 
-<object data="mass-radius-density.svg" type="image/svg+xml">
-  <param name="url" value="mass-radius-density.svg">
+#+BEGIN_HTML
+<object data="/static/open-exoplanet-catalogue/mass-radius-density.svg" type="image/svg+xml">
+  <param name="url" value="/static/open-exoplanet-catalogue/mass-radius-density.svg">
 </object>
+#+END_HTML
 
-```julia
+#+BEGIN_SRC julia
 plot(
   layer(
     planet_sizes,
@@ -207,15 +216,18 @@ plot(
   Guide.xlabel("Radius (Earth Radii)"),
   Guide.ylabel("Mass (Earth Mass)")
 )
-```
+#+END_SRC
 
 The giants in our solar system (Jupiter/Saturn/Uranus/Neptune) pale in comparison to the larger exoplanets. The plot below shows the relative size of the largest and smallest exoplanets discovered along with Jupiter and Earth as references.
 
-<object data="relative-size.svg" type="image/svg+xml">
-  <param name="url" value="relative-size.svg">
+#+BEGIN_HTML
+<object data="/static/open-exoplanet-catalogue/relative-size.svg" type="image/svg+xml">
+  <param name="url" value="/static/open-exoplanet-catalogue/relative-size.svg">
 </object>
+#+END_HTML
 
-```julia
+
+#+BEGIN_SRC julia
 sorted_size = sort(dropmissing(exoplanets, :pl_rade), :pl_rade)
 smallest = first(sorted_size)
 largest = last(sorted_size)
@@ -255,17 +267,19 @@ plot(
   ),
   Scale.y_continuous(minvalue=-200, maxvalue=200)
 )
-```
+#+END_SRC
 
-### How hot are they?
+*** How hot are they?
 
 A key characteristic for planet habitability is the surface temperature. We don't have a way to measure this on planets so far away, as atmospheric properties can raise or lower temperatures at the surface. Equilibrium temperature is a measurement we use to estimate their theoretical temperature by considering the planet as if it were a black body.[^7]
 
-<object data="equilibrium-temperature.svg" type="image/svg+xml">
-  <param name="url" value="equilibrium-temperature.svg">
+#+BEGIN_HTML
+<object data="/static/open-exoplanet-catalogue/equilibrium-temperature.svg" type="image/svg+xml">
+  <param name="url" value="/static/open-exoplanet-catalogue/equilibrium-temperature.svg">
 </object>
+#+END_HTML
 
-```julia
+#+BEGIN_SRC julia
 plot(
   layer(
     x = [1],
@@ -291,19 +305,21 @@ plot(
   Guide.colorkey(title="Planet Equilibrium   \nTemperature (K)  "),
   Guide.shapekey(pos=[10000,10000])
 )
-```
+#+END_SRC
 
-### What do their orbits look like?
+*** What do their orbits look like?
 
 The orbits of the discovered exoplanets dpm't actually vary that much. Most orbits are small, circular and close to their host star.
 
 I think the reason for these small, regular orbits has to do with our discovery methods. Since planets don't emit light, we can't measure them directly. We find them by measuring perturbations in movement or luminosity of their host star. Since a planets effect on a star (both occlusion and gravity) grows weaker with distance, it's natural that we find exoplanets that are close to their star.
 
-<object data="orbit-grid.svg" type="image/svg+xml">
-  <param name="url" value="orbit-grid.svg">
+#+BEGIN_HTML
+<object data="/static/open-exoplanet-catalogue/orbit-grid.svg" type="image/svg+xml">
+  <param name="url" value="/static/open-exoplanet-catalogue/orbit-grid.svg">
 </object>
+#+END_HTML
 
-```julia
+#+BEGIN_SRC julia
 # Orbit characteristics
 semi_major_axis = plot(
   dropmissing(exoplanets, [:pl_orbsmax]),
@@ -336,30 +352,32 @@ inclination = plot(
 )
 
 orbits = gridstack([semi_major_axis period; eccentricity inclination])
-```
+#+END_SRC
 
-### Do they have moons?
+*** Do they have moons?
 
 Not a single exoplanet in this dataset has a moon! This goes hand in hand with the discovery method problems I mentioned in the orbits section. Current techniques can't pick up objects so small, dark, and far away. The exoplanets we find are close to their host star where it's unlikely for a moon to develop a stable orbit. It's probable that we'll find a lot of exomoons in the future. Our solar system suggests that they are common around larger planets, with Jupiter and Saturn hosting 67 and 62 moons respectively.
 
-```julia
+#+BEGIN_SRC julia
 julia> exoplanets[exoplanets[:pl_mnum] .> 0, :pl_mnum] |> length
 julia> 0
-```
+#+END_SRC
 
-## Stellar Characteristics
+** Stellar Characteristics
 
 Stars are a key factor in the life and discovery of exoplanets. Below we'll go through some of the characteristics of the stars that are hosting exoplanets and we'll see how they compare to our star, the sun.
 
-### How big are the stars?
+*** How big are the stars?
 
 Our sun is pretty close to the perfect average of star sizes. Of the discovered stars with exoplanets, the median mass and radius are 0.975 and 0.970 times the mass and radius of our sun. The mean mass and radius are 1.551 and 1.009 times the values of our sun.
 
-<object data="star-mass-radius-scatter.svg" type="image/svg+xml">
-  <param name="url" value="star-mass-radius-scatter.svg">
+#+BEGIN_HTML
+<object data="/static/open-exoplanet-catalogue/star-mass-radius-scatter.svg" type="image/svg+xml">
+  <param name="url" value="/static/open-exoplanet-catalogue/star-mass-radius-scatter.svg">
 </object>
+#+END_HTML
 
-```julia
+#+BEGIN_SRC julia
 plot(
   layer(
     x = [1],
@@ -379,17 +397,19 @@ plot(
   Scale.y_log10,
   Scale.x_log10
 )
-```
+#+END_SRC
 
-### How hot and bright are they?
+*** How hot and bright are they?
 
 Most stars are actually less bright and hot than our own sun. The majority we've found are within the main sequence star classification.[^7]
 
-<object data="star-temperature-brightness.svg" type="image/svg+xml">
-  <param name="url" value="star-temperature-brightness.svg">
+#+BEGIN_HTML
+<object data="/static/open-exoplanet-catalogue/star-temperature-brightness.svg" type="image/svg+xml">
+  <param name="url" value="/static/open-exoplanet-catalogue/star-temperature-brightness.svg">
 </object>
+#+END_HTML
 
-```julia
+#+BEGIN_SRC julia
 plot(
   layer(
     x = [5777],
@@ -415,7 +435,7 @@ plot(
   style(key_position=:none),
   Coord.cartesian(xflip=true)
 )
-```
+#+END_SRC
 
 ### What are they composed of?
 
@@ -423,11 +443,13 @@ All active stars give off energy through nuclear fusion reactions in their cores
 
 The plot below shows the composition ratios of exoplanets we've measured. Iron is the most dominant by far, and we can see that the ratio around 0 (or our suns composition) is the most common.
 
-<object data="star-metallicity.svg" type="image/svg+xml">
-  <param name="url" value="star-metallicity.svg">
+#+BEGIN_HTML
+<object data="/static/open-exoplanet-catalogue/star-metallicity.svg" type="image/svg+xml">
+  <param name="url" value="/static/open-exoplanet-catalogue/star-metallicity.svg">
 </object>
+#+END_HTML
 
-```julia
+#+BEGIN_SRC julia
 met_fe = plot(
   dropmissing(exoplanets, [:st_metfe]),
   x = :st_metfe,
@@ -443,13 +465,7 @@ met_ratio = plot(
 )
 
 metallicity = hstack([met_fe, met_ratio])
-```
-
-## Conclusion
-
-Thanks for reading and exploring the exoplanets with me! We looked at how we discover exoplanets, what the exoplanets are like, and how their host stars compare to our own. I hope this inspires someone to dig into this dataset a bit more and hopefully find some cool insights. In the future it could be fun to build a model to process spectral data to search for exoplanet candidates of our own.
-
-I think the future of astronomy is so exciting! It seems like every year NASA releases a cool breakthrough. Astronomy is so open and friendly and I can't wait to dig in to more universal datasets going forward.
+#+END_SRC
 
 [^1]: https://www.jpl.nasa.gov/news/news.php?feature=6991
 [^2]: https://www.lsst.org/
