--- a/src/notebooks/gradient-descent-neural-network.ipynb
+++ b/src/notebooks/gradient-descent-neural-network.ipynb
@@ -105,7 +105,7 @@
     "We have a hidden $Z$ and output layer $Y$ with an activation function $h$.\n",
     "\n",
     "$$\n",
-    "\\begin{array}{l c  c}\n",
+    "\\begin{array}{l c c}\n",
     "Name & Function & Derivative \\\\\n",
     "\\hline \\\\\n",
     "\\text{Logistic} & \\sigma(x) = \\frac{1}{1 + e^{-x}} & \\sigma(x)(1 - \\sigma(x)) \\\\\n",
@@ -113,6 +113,7 @@
     "\\text{Hyperbolic Tangent} & tanh(x) = \\frac{e^x - e^{-x}}{e^x + e^{-x}} & 1 - tanh(x)^2 \\\\\n",
     "\\\\\n",
     "\\text{Rectified Linear Unit} & (x)^+ = max(0, x) & 0 \\text{ if } x < 0 \\text{ else } 1 \\\\\n",
+    "\\hline \\\\\n",
     "\\end{array}\n",
     "$$"
    ]
