--- a/src/notebooks/high-dimensional-space.ipynb
+++ b/src/notebooks/high-dimensional-space.ipynb
@@ -198,11 +198,20 @@
     "plt.xlabel('dimensions')\n",
     "plt.ylabel('interior volume')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** Adapted from CSU545 Lecture\n",
+    "\n",
+    "- Dr. Charles Anderson"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6.9 64-bit",
+   "display_name": "Python 3.8.13 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -216,12 +225,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "df0893f56f349688326838aaeea0de204df53a132722cbd565e54b24a8fec5f6"
    }
   }
  },
