--- a/src/notebooks/quantization.ipynb
+++ b/src/notebooks/quantization.ipynb
@@ -15,11 +15,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Overview\n",
+    "\n",
+    "Quantization is an effective technique for significantly reducing the computational requirements of large models."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%matplotlib inline\n",
+    "\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import torch\n",
+    "import torchvision"
+   ]
   }
  ],
  "metadata": {
@@ -48,5 +64,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
