--- a/src/notebooks/weight-pruning.ipynb
+++ b/src/notebooks/weight-pruning.ipynb
@@ -13,6 +13,15 @@
     "#+DATE: 2020-01-02\n",
     "#+HERO: /static/space-bg.png"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Overview\n",
+    "\n",
+    "..."
+   ]
   }
  ],
  "metadata": {
@@ -36,5 +45,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
