Reduce conv desc

--- a/src/notebooks/convolutions.ipynb
+++ b/src/notebooks/convolutions.ipynb
@@ -9,7 +9,7 @@
    },
    "source": [
     "#+TITLE: Convolutions\n",
-    "#+DESCRIPTION: Convolutions are mathematical operations that process input data using filters or kernels. The operation involves sliding the filter over the input data and performing an element-wise multiplication between the filter weights and the input window. This is followed by a sum over the channels to produce a condensed feature map. These filters often learn to detect edges, shapes, or textures in image data and a convolutional layer contains multiple filters to produce complex feature represntations. Convolutional layers significantly reduce the number of parameters compared to fully connected layers and they are translation invariant which can significantly reduce overfitting and improve generalization.\n",
+    "#+DESCRIPTION: Convolutions are mathematical operations that process input data using filters or kernels. The operation involves sliding the filter over the input data and performing an element-wise multiplication between the filter weights and the input window. These filters often learn to detect edges, shapes, or textures in image data in a translation invariant way.\n",
     "#+DATE: 2020-01-02\n",
     "#+HERO: /static/space-bg.png"
    ]
@@ -224,5 +224,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
